--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,24 @@ body{
     font-family: Arial sans-serif;
     padding-top: 100px;
 }
+p{
+    font-size: 20px;
+}
 
 /* UTILITY */
 .pd-r{
     padding-right: 20px;
+}
+
+.title {
+    font-size: 45px;
+}
+
+body .btn-stile{
+    border-radius: 15px;
+    padding: 10px 1rem;
+    font-weight: bold;
+    font-size: 18px;
 }
 
 /* HEADER */
@@ -41,13 +55,6 @@ header .nav-item .icon-lens{
     height: 30px;
 }
 
-header .nav-item .btn-stile{
-    border-radius: 20px;
-    padding: 10px 1rem;
-    font-weight: bold;
-    font-size: 18px;
-}
-
 /* HERO */
 .hero {
     width: 100%;
@@ -64,7 +71,16 @@ header .nav-item .btn-stile{
     height: 100%;
 }
 
+.hero ul{
+    list-style: none;
+}
 
 /* MAIN */
+
+.box{
+    width: 215px;
+    height: 120px;
+    border-radius: 20px;
+}
 
 /* FOOTER */
