--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,12 @@ header .nav-item .icon-lens{
 .box{
     width: 215px;
     height: 120px;
+}
+
+main .box img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
     border-radius: 20px;
 }
 
