add img info-section

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,12 @@ body .btn-stile{
     font-size: 18px;
 }
 
+/* COLOR-TEXT */
+.cl-p{
+    color: #0072ce;
+}
+
+
 /* HEADER */
 .main-header .logo {
     width: 100px;
@@ -88,5 +94,20 @@ main .box img {
     height: 100%;
     border-radius: 20px;
 }
+
+main .info-ps5 img,
+main .box-ps5 img  {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+
+}
+
+.box-ps5{
+    width: 150px;
+    height: 140px;
+}
+
+
 
 /* FOOTER */
