--- a/css/style.css
+++ b/css/style.css
@@ -12,15 +12,23 @@ p{
     padding-right: 20px;
 }
 
+.mrg-r{
+    margin-right: 5px;
+}
+
 .title {
     font-size: 45px;
 }
 
 body .btn-stile{
-    border-radius: 15px;
+    border-radius: 30px;
     padding: 10px 1rem;
     font-weight: bold;
     font-size: 18px;
+}
+
+.sm-t{
+    margin-top: 80px;
 }
 
 /* COLOR-TEXT */
@@ -111,6 +119,10 @@ main .box-ps5 img  {
     cursor: pointer;
 }
 
+main .box-ps5:hover{
+    opacity: 1;
+}
+
 .box-hover{
     padding-bottom: 10px;
 }
@@ -120,6 +132,24 @@ main .box-ps5:hover .box-hover{
 }
 
 
+/* hero2 */
+.hero2 {
+    width: 100%;
+    height: 636px;
+    background-image: url("/img/it-takes-two-hero-banner-desktop.jpg");
+    background-position: 50% -50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
+.hero2 .container-takes img{
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
+
+.hero2 ul{
+    list-style: none;
+}
 
 /* FOOTER */
