--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@ body .btn-stile{
 
 
 /* HEADER */
+.main-header{
+    height: 100px;
+} 
+
 .main-header .logo {
     width: 100px;
     height: 50px;
@@ -72,7 +76,7 @@ header .nav-item .icon-lens{
 /* HERO */
 .hero {
     width: 100%;
-    height: 636px;
+    height: 750px;
     background-image: url("/img/jumbo-bg.png");
     background-position: 50% -50%;
     background-repeat: no-repeat;
@@ -90,11 +94,6 @@ header .nav-item .icon-lens{
 }
 
 /* MAIN */
-
-.box{
-    width: 215px;
-    height: 120px;
-}
 
 main .box img {
     object-fit: contain;
@@ -152,4 +151,15 @@ main .box-ps5:hover .box-hover{
     list-style: none;
 }
 
+/* new games */
+.new-games{
+    background-color: #1f1f1f;
+}
+
+.box-new-games img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+}
 /* FOOTER */
