--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ main .box-ps5:hover .box-hover{
 /* hero2 */
 .hero2 {
     width: 100%;
-    height: 636px;
+    height: 750px;
     background-image: url("/img/it-takes-two-hero-banner-desktop.jpg");
     background-position: 50% -50%;
     background-repeat: no-repeat;
@@ -162,4 +162,18 @@ main .box-ps5:hover .box-hover{
     height: 100%;
     border-radius: 30px;
 }
+
+/* list-PS4 */
+
+.box-PS4 {
+    width: 100%;
+    height: 300px;
+}
+
+.box-PS4 img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
+
 /* FOOTER */
