--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body{
     font-family: Arial sans-serif;
     padding-top: 100px;
 }
+
 p{
     font-size: 20px;
 }
@@ -38,6 +39,11 @@ body .btn-stile{
 
 
 /* HEADER */
+
+main{
+    overflow: auto;
+}
+
 .main-header{
     height: 100px;
 } 
@@ -133,7 +139,7 @@ main .box-ps5:hover .box-hover{
 
 /* hero2 */
 .hero2 {
-    width: 100%;
+    /* width: 100%; */
     height: 750px;
     background-image: url("/img/it-takes-two-hero-banner-desktop.jpg");
     background-position: 50% -50%;
@@ -175,5 +181,40 @@ main .box-ps5:hover .box-hover{
     width: 100%;
     height: 100%;
 }
+
+/* plus */
+.plus-section {
+    background-color: #bebcbb;
+}
+
+.box-plus {
+    width: 300px;
+}
+
+.box-plus img{
+    object-fit: contain;
+    width: 100%;
+    height: 80px;
+}
+
+.container-banner-plus {
+    width: 100%;
+    height: 300px;
+}
+
+.plus-section .container-banner-plus img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
+
+/* sale */
+
+.box-sale img{
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+}
+
 
 /* FOOTER */
