--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ main .box-ps5:hover .box-hover{
     height: 300px;
 }
 
-.plus-section .container-banner-plus img {
+ .container-banner-plus img {
     object-fit: contain;
     width: 100%;
     height: 100%;
@@ -216,5 +216,8 @@ main .box-ps5:hover .box-hover{
     height: 100%;
 }
 
+.playstation-now{
+    background-color: #161c3b;
+}
 
 /* FOOTER */
