--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,6 @@ body .btn-stile{
 
 /* HEADER */
 
-main{
-    overflow: auto;
-}
-
 .main-header{
     height: 100px;
 } 
@@ -205,7 +201,7 @@ main .box-ps5:hover .box-hover{
  .container-banner-plus img {
     object-fit: contain;
     width: 100%;
-    height: 100%;
+    height: 400px;
 }
 
 /* sale */
@@ -218,7 +214,55 @@ main .box-ps5:hover .box-hover{
 
 .playstation-now{
     background-color: #161c3b;
-    height: 500px;
+    height: 400px;
+}
+
+/* social */
+
+.container-social{
+    max-width: 576px ;
+    margin: 0 auto;
 }
 
 /* FOOTER */
+footer {
+    background-color: #00439c;
+}
+
+footer .footer-brand{
+    width: 100px;
+    height: 100px;
+}
+
+footer img {
+    object-fit: contain ;
+    width: 100%;
+    height: 100%;
+    fill: #fff;
+}
+
+footer .language{
+    width: 30px;
+    height: 30px;
+}
+
+
+footer a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+footer a:hover{
+    color: #000;
+}
+
+footer .box-copyright{
+    width: 150px;
+    height: 100px;
+}
+
+footer p {
+    font-weight: 600;
+}
