--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,13 @@ body .btn-stile{
     font-size: 18px;
 }
 
+.btn-stile:hover{
+    background: #e5e5e5;
+    padding: 8px .75rem;
+    webkit-box-shadow: inset 0px 0px 5px #000;
+    moz-box-shadow: inset 0px 0px 5px #000;
+    box-shadow: inset 0px 0px 5px #000;
+}
 .sm-t{
     margin-top: 80px;
 }
