--- a/css/style.css
+++ b/css/style.css
@@ -33,12 +33,13 @@ body .btn-stile{
 }
 
 .btn-stile:hover{
-    background: #e5e5e5;
-    padding: 8px .75rem;
-    webkit-box-shadow: inset 0px 0px 5px #000;
-    moz-box-shadow: inset 0px 0px 5px #000;
-    box-shadow: inset 0px 0px 5px #000;
+    box-shadow: inset 0px 0px 2px #000, 
+                 inset 0px -2px 0px  #000, 
+                inset 0px  2px 0px   #000,
+                inset 2px 0px 0px #000,
+                inset -2px 0px 0px   #000;
 }
+
 .sm-t{
     margin-top: 80px;
 }
