--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body ul{
 
 .title {
     font-size: 45px;
+    font-weight: 600;
 }
 
 body .btn-stile{
@@ -34,10 +35,11 @@ body .btn-stile{
 
 .btn-stile:hover{
     box-shadow: inset 0px 0px 2px #000, 
-                 inset 0px -2px 0px  #000, 
+                inset 0px -2px 0px  #000, 
                 inset 0px  2px 0px   #000,
                 inset 2px 0px 0px #000,
                 inset -2px 0px 0px   #000;
+    padding: 8px .80rem;
 }
 
 .sm-t{
