add curdor pointer

--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,7 @@ main .box-ps5:hover .box-hover{
     object-fit: contain;
     width: 100%;
     height: 100%;
+    cursor: pointer;
 }
 
 .playstation-now{
